@@ -6,6 +6,9 @@ Version 2.1.0 (2020-09-04)
   * Added a new command, `lumi-save-token`, as an interface to LuminosoClient's
     existing "save_token" functionality.
 
+  * Tweaked the `lumi-download` command to improve performance by using the
+    (relatively new) `fields` parameter on the document-downloading endpoint.
+
 Version 2.0.1 (2020-07-10)
 
   * Added a new method, `wait_for_sentiment_build`, to allow users to wait for
